updates -- move to blueprint and add delete confirm modal / page

--- a/tinker/events/templates/submit-confirm.html
+++ b/tinker/events/templates/submit-confirm.html
@@ -2,6 +2,8 @@
 
 {% block title %}Success{% endblock %}
 
+{% block page_title %}Bethel University Tinker{% endblock %}
+
 {% block main_content %}
 
   <div class="row">
