--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -23,9 +23,9 @@
   <div class="row">
   <div class="large-12 columns">
     {% if add_form %}
-      <form id="eventform" action="/submit" method="post">
+      <form id="eventform" action="/event/submit" method="post">
     {% else %}
-      <form id="eventform" action="/submit-edit" method="post">
+      <form id="eventform" action="/event/submit-edit" method="post">
       <input type="hidden" name="event_id" id="event_id" value="{{ event_id }}"/>
     {% endif %}
         {% if form.errors %}
