--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -32,7 +32,7 @@
       <div class="nav-bar right">
        <ul class="button-group">
          <li><a href="/" class="button button-nav">Home</a></li>
-         <li><a href="/add-event" class="button button-nav">New Event</a></li>
+         <li><a href="/event/add" class="button button-nav">New Event</a></li>
 {#         {% if 'FACULTY' in session['roles'] %}#}
 {#          <li><a href="/facutly-bio" class="button">Edit Bio</a></li>#}
 {#         {% endif %}#}
