--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -14,7 +14,7 @@
   <div class="large-12 columns">
 
     <p>All events need to be reviewed and approved by Conference and Event Services. This will happen between 2-3 business days.<br/>
-      When your event has been approved, you'll receive an email and the text in the green box will say "View Event".
+      When your event has been approved, you'll receive an email and the text in the first box will say "View".
     </p>
   </div>
  </div>
