--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -11,7 +11,7 @@
      background-color: #0F2C52;
    }
 
-    .button.small, .button.small.success, .button.tiny, .button.postfix{
+    .button.small, .button.small.success, .button.tiny, .button.postfix, .input.postfix{
       background-color: #0069AA;
     }
 
