--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -48,7 +48,7 @@
   <div class="row">
 
             <!-- Main Blog Content -->
-            <div class="large-10 columns" role="content">
+            <div class="large-{% block row_width %}10{% endblock %} columns" role="content">
 
                   {% block main_content %}
                   {% endblock %}
