--- a/tinker/wufoo/templates/index.html
+++ b/tinker/wufoo/templates/index.html
@@ -16,22 +16,24 @@ Wufoo Preload
 {% endblock %}
 
 {% block main_content %}
-  <div>
+  <form method="post" name="wufoo-preload">
+    <div>
 
-      <label for="wufoo-dropdown-limit"> Limit:</label>
-      <input type="text" id="wufoo-dropdown-limit"/>
+        <label for="wufoo-dropdown-limit"> Limit:</label>
+        <input type="text" id="wufoo-dropdown-limit"/>
 
-      <label for ="wufoo-form-hash">Select a form:</label>
-      <select name="wufoo-form-hash" id="wufoo-form-hash" size="5">
-{#        {% for form in forms %}#}
-{#          <option value="{{ form.Hash }}:{{ form.Url }}"> {{ form.Name }} ( {{ form.Url }} ) </option>#}
-{#        {% endfor %}#}
-      </select>
-  </div>
+        <label for ="wufoo-form-hash">Select a form:</label>
+        <select name="wufoo-form-hash" id="wufoo-form-hash" size="5">
+  {#        {% for form in forms %}#}
+  {#          <option value="{{ form.Hash }}:{{ form.Url }}"> {{ form.Name }} ( {{ form.Url }} ) </option>#}
+  {#        {% endfor %}#}
+        </select>
+    </div>
 
-  <div id="preload-config">
+    <div id="preload-config">
 
-  </div>
+    </div>
+  </form>
 
 {% endblock %}
 
