--- a/tinker/redirects/templates/redirect-ajax.html
+++ b/tinker/redirects/templates/redirect-ajax.html
@@ -1,5 +1,5 @@
 {% for redirect in redirects %}
-  <tr class="redirect-row">
+  <tr class="redirect-row table-hover">
     <td class="from_path">{{ redirect.from_path }}</td>
     <td class="to_url">{{ redirect.to_url }}</td>
   </tr>
