--- a/tinker/redirects/templates/redirects.html
+++ b/tinker/redirects/templates/redirects.html
@@ -13,18 +13,27 @@
   </div>
 </div>
 <hr/>
+<form action="." id="new-redirect-form">
+  <div class="row">
+    <div class="large-6 columns">
+      <label>From Path
+        <input type="text" name="new-redirect-from" id="new-redirect-from"/>
+      </label>
+    </div>
+    <div class="large-6 columns">
+      <label>to URL
+        <input type="text" name="new-redirect-to" id="new-redirect-to" />
+      </label>
+    </div>
+  </div>
+  <div class="row">
+    <div class="large-12 columns" id="form-save-button"></div>
+  </div>
+</form>
+
 <div class="row">
   <div class="large-12 columns">
-    <form action="." id="new-redirect-form">
-      <input type="text" name="new-redirect-from" id="new-redirect-from"/>
-      <input type="text" name="new-redirect-to" id="new-redirect-to" />
-    </form>
-  </div>
-</div>
-<div class="row">
-  </div>
-
-    <table width="900">
+    <table >
       <thead>
         <tr>
           <th width="400">From Path</th>
@@ -32,7 +41,6 @@
         </tr>
       </thead>
       <tbody id="redirects-table">
-
       </tbody>
     </table>
   </div>
@@ -40,14 +48,6 @@
 
   <script type="text/javascript">
 
-  function loadTable(){
-      $.ajax({
-        url: "/redirect/load",
-        context: document.body
-      }).done(function(data) {
-        updateTable(data);
-      });
-  }
   function updateTable(data){
       $("#redirects-table").html(data);
       $('#new-redirect-to').attr("disabled", false)
@@ -56,7 +56,8 @@
       $(".from_path").each(function(){
         var this_val = $(this).html();
         if (search_val == this_val){
-          $('#new-redirect-to').attr("disabled", true)
+          $("#new-redirect-to").val('');
+          $('#new-redirect-to').attr("disabled", true);
           return false;
         }
       });
@@ -66,6 +67,14 @@
         $("#confirmModal").foundation('reveal', 'open');
       });
   }
+
+var delay = (function(){
+  var timer = 0;
+  return function(callback, ms){
+    clearTimeout (timer);
+    timer = setTimeout(callback, ms);
+  };
+})();
 
   function showAdd(){
     $("#new-redirect-to").show();
@@ -80,10 +89,15 @@
       });
   }
 
-
-  $("#new-redirect-from").keyup(function(){
-     // search the DB for currrent path
-    loadTableForSearch($(this).val());
+  $('#new-redirect-from').keyup(function() {
+    var value = $(this).val();
+    if (value[0] != '/' && value.length > 0) {
+      $(this).val("/" + value);
+      value = $(this).val();
+    }
+    delay(function(){
+      loadTableForSearch(value);
+    }, 300 );
   });
 
   $(document).ready(function(){
@@ -105,7 +119,7 @@
       });
 
     });
-    $("#new-redirect-form").append(input);
+    $("#form-save-button").append(input);
 
     $("#modal-confirm").click(function(){
       var from_path = {"from_path": $(this).data('delete-path')};
@@ -117,11 +131,6 @@
         }
       });
     });
-
-
-
-
-{#    loadTable();#}
 
   });
 
