--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -33,9 +33,9 @@
        <ul class="button-group">
          <li><a href="/" class="button button-nav">Home</a></li>
          <li><a href="/add-event" class="button button-nav">New Event</a></li>
-{#         {% if 'FACULTY' in session['roles'] %}#}
-{#          <li><a href="/facutly-bio" class="button">Edit Bio</a></li>#}
-{#         {% endif %}#}
+{#         {% if 'FACULTY' in session['roles'] %} #}
+          <li><a href="/faculty-bio" class="button">Faculty Bios</a></li>
+{#         {% endif %} #}
 {#         <li><a href="/wufoo" class="button">Wufoo</a></li>#}
 
         </ul>
