--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -88,7 +88,7 @@
             {{ field }}
 
           {% elif field.type == "CKEditorTextAreaField" %}
-            {{ field(class="tinyMCE") }}
+            {{ field(class="ckeditor") }}
 
           {% elif field.type == "DateTimeField" %}
             {# do the entire date field in here for now #}
