Updated Faculty Bio text and style

--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -27,7 +27,7 @@
             <a class="home-button button" href="/event">Events</a>
 
             {% if 'FACULTY' in session['roles'] %}
-                <a href="/faculty-bios" class="home-button button">Faculty Bios</a>
+                <a href="/faculty-bios" class="home-button button">Edit Your Bio page</a>
             {% endif %}
 
             {#
