--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -61,9 +61,9 @@
 
       {% if 'FACULTY' in session['roles'] %}
            {% if '/faculty-bios/' in request.path %}
-             <li><a href="/faculty-bios" class="button button-nav active">Faculty Bios</a></li>
+             <li><a href="/faculty-bios" class="button button-nav active">Edit Your Bio page</a></li>
            {% else %}
-               <li><a href="/faculty-bios" class="button button-nav">Faculty Bios</a></li>
+               <li><a href="/faculty-bios" class="button button-nav">Edit Your Bio page</a></li>
            {% endif %}
       {% endif %}
 
