--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -35,7 +35,7 @@
       </div>
     {% endif %}
 
-    {% if session['username'] in ['ejc84332', 'ces55739'] %}
+    {% if session['username'] == 'ejc84332' or session['username'] ==  'ces55739' %}
       <div class="row">
         <div class="large-10 columns">
           <a href="/redirects" class="button expand">Manage Redirects</a>
@@ -43,7 +43,7 @@
       </div>
     {% endif %}
 
-    {% if session['username'] in ['ejc84332', 'ces55739'] %}
+    {% if session['username'] == 'ejc84332' or session['username'] ==  'ces55739' %}
       <div class="row">
         <div class="large-10 columns">
           <a href="/wufoo" class="button expand">Manage wufoo</a>
