Updated the homepage

--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -61,7 +61,9 @@
             <a class="home-button button">Other Forms</a>
             #}
 
+        <p>Image Attribution <a href="about">here</a></p>
           </div>
+
 {% endblock %}
 
 
