fixed/added a working escape function for WYSIWYGs

--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -61,7 +61,7 @@
             <a class="home-button button">Other Forms</a>
             #}
 
-        <p>Image Attribution <a href="about">here</a></p>
+        <p><a href="about">Image Attribution</a></p>
           </div>
 
 {% endblock %}
