--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -35,7 +35,7 @@
         {% if 'FACULTY' in session['roles'] %}
             <div class="large-6 columns">
 
-              <a href="/faculty-bios" class="button expand"><img src="get-image/faculty-bio-icon.png" class="button-image" /><br />Edit your faculty bio page</a>
+              <a href="/faculty-bios" class="button expand"><img src="get-image/faculty-bio-icon.png" class="button-image" /><br />Faculty Bios</a>
             </div>
         {% endif %}
     </div>
@@ -61,7 +61,7 @@
             <a class="home-button button">Other Forms</a>
             #}
 
-        <p><a href="about">Image Attribution</a></p>
+
           </div>
 
 {% endblock %}
