Fixed emdash in WYSIWYGs. Changed 'title' to first name and last names.

--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -44,7 +44,7 @@
     {% if username in ['ejc84332', 'ces55739'] %}
       <div class="row">
         <div class="large-6 columns">
-          <a href="/redirects" class="button expand"><img src="get-image/redirect-icon.png" class="button-image" /><br />Manage Redirects</a>
+          <a href="/redirect" class="button expand"><img src="get-image/redirect-icon.png" class="button-image" /><br />Manage Redirects</a>
         </div>
 
         <div class="large-6 columns">
