Updated the default text for faculty bios.

--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -75,13 +75,13 @@
        {% endif %}
     #}
 
-
+    {% if false %}
        {% if request.path == '/redirect/' %}
          <li><a href="/redirect" class="button button-nav active">Redirects</a></li>
        {% else %}
            <li><a href="/redirect" class="button button-nav">Redirects</a></li>
        {% endif %}
-
+    {% endif %}
 
         </ul>
       </div>
