--- a/tinker/templates/error/403.html
+++ b/tinker/templates/error/403.html
@@ -12,15 +12,7 @@
       <div class="large-9 medium-9 small-12 columns small-centered">
       <h1 class="oversized">Oh, fiddlesticks, what now?</h1>
 
-      <h5>Looks like you don't have permission to view this page. Go <a href="/"> home </a> or try an item below</h5>
-      <ul>
-       <li><a href="/" class="">Home</a></li>
-       <li><a href="/event" class="">Events</a></li>
-      {% if 'FACULTY' in session['roles'] %}
-           <li><a href="/faculty-bios" class="">Faculty Bios</a></li>
-      {% endif %}
-      {# <li><a href="/wufoo" class="">Wufoo</a></li> #}
-       </ul>
+      <h5>Looks like you don't have permission to view this page.</h5>
       </div>
       </div>
      </section>
