--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -11,7 +11,7 @@
        {% else %}
            <li><a href="/event" class="button button-nav">Events</a></li>
        {% endif %}
-
+        {{session['groups']}}
        {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] %}
            {% if '/faculty-bios/' in request.path %}
              <li><a href="/faculty-bios" class="button button-nav active">Faculty Bios</a></li>
