--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -1,39 +1,42 @@
-<ul class="button-group">
 
-       {% if request.path == '/' %}
-         <li><a href="/" class="button button-nav active">Home</a></li>
-       {% else %}
-           <li><a href="/" class="button button-nav">Home</a></li>
-       {% endif %}
+{% macro nav() %}
+  <ul class="button-group">
 
-       {% if '/event/' in request.path %}
-         <li><a href="/event" class="button button-nav active">Events</a></li>
-       {% else %}
-           <li><a href="/event" class="button button-nav">Events</a></li>
-       {% endif %}
+         {% if request.path == '/' %}
+           <li><a href="/" class="button button-nav active">Home</a></li>
+         {% else %}
+             <li><a href="/" class="button button-nav">Home</a></li>
+         {% endif %}
 
-       {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] %}
-           {% if '/faculty-bios/' in request.path %}
-             <li><a href="/faculty-bios" class="button button-nav active">Faculty Bios</a></li>
-           {% else %}
-               <li><a href="/faculty-bios" class="button button-nav">Faculty Bios</a></li>
-           {% endif %}
-       {% endif %}
+         {% if '/event/' in request.path %}
+           <li><a href="/event" class="button button-nav active">Events</a></li>
+         {% else %}
+             <li><a href="/event" class="button button-nav">Events</a></li>
+         {% endif %}
 
-    {#
-       {% if request.path == '/wufoo/' %}
-         <li><a href="/wufoo" class="button button-nav active">Wufoo</a></li>
-       {% else %}
-           <li><a href="/wufoo" class="button button-nav">Wufoo</a></li>
-       {% endif %}
-    #}
+         {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] %}
+             {% if '/faculty-bios/' in request.path %}
+               <li><a href="/faculty-bios" class="button button-nav active">Faculty Bios</a></li>
+             {% else %}
+                 <li><a href="/faculty-bios" class="button button-nav">Faculty Bios</a></li>
+             {% endif %}
+         {% endif %}
 
-    {% if 'Redirect' in session['groups'] %}
-       {% if request.path == '/redirect/' %}
-         <li><a href="/redirect" class="button button-nav active">Redirects</a></li>
-       {% else %}
-           <li><a href="/redirect" class="button button-nav">Redirects</a></li>
-       {% endif %}
-    {% endif %}
+      {#
+         {% if request.path == '/wufoo/' %}
+           <li><a href="/wufoo" class="button button-nav active">Wufoo</a></li>
+         {% else %}
+             <li><a href="/wufoo" class="button button-nav">Wufoo</a></li>
+         {% endif %}
+      #}
 
-</ul>
+      {% if 'Tinker Redirects' in session['groups'] %}
+         {% if request.path == '/redirect/' %}
+           <li><a href="/redirect" class="button button-nav active">Redirects</a></li>
+         {% else %}
+             <li><a href="/redirect" class="button button-nav">Redirects</a></li>
+         {% endif %}
+      {% endif %}
+
+  </ul>
+{% endmacro %}
