--- a/tinker/wufoo/templates/embed_form.html
+++ b/tinker/wufoo/templates/embed_form.html
@@ -1,3 +1,7 @@
+
+<div id="wufoo-qo8j30m1rat7u1">
+        Hey! Looks like the form didn't load. If it doesn't load after a second or two, please refresh the page and you should see it. If that doesn't work, please <a href="https://www.bethel.edu/about/contact/questions-comments">let us know.</a>
+    </div>
 <script type="text/javascript">var {{ formhash }};(function(d, t) {
         var s = d.createElement(t), options = {
         'userName':'betheluniversity',
@@ -7,7 +11,7 @@
         'async':true,
         'host':'wufoo.com',
         'header':'show',
-        'defaultValues': {{ preload_options }},
+        'defaultValues': '{{ preload_options }}',
         'ssl':true};
         s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
         s.onload = s.onreadystatechange = function() {
