add about link for image attribution

--- a/tinker/templates/about-page.html
+++ b/tinker/templates/about-page.html
@@ -20,6 +20,7 @@
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
+    <h3>Image Attribution</h3>
     <div class="row">
         <div class="large-6 columns">
             <p>Redirect</p>
