--- a/tinker/templates/error/503.html
+++ b/tinker/templates/error/503.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="large-9 medium-9 small-12 columns small-centered">
           <h1 class="oversized">Whoops! Tinker lost its connection.</h1>
-          <h5>We’re fixing the the loose wire right now. Check back soon!</h5>
+          <h5>We’re fixing the loose wire right now. Check back soon!</h5>
         </div>
       </div>
      </section>
