--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -83,7 +83,7 @@
               <div class="row">
                 <div class="large-6 columns">
                   <p>&copy; Bethel University -- <a href="/about">About</a></p>
-                   {{ session['username'] }}
+                   <!-- {{ session['username'] }} -->
                 </div>
               </div>
             </div>
