make preloading interface a little better.

--- a/tinker/templates/foundation_base.html
+++ b/tinker/templates/foundation_base.html
@@ -54,7 +54,7 @@
 
 
       <script src="//cdn1.bethel.edu/foundation/js/foundation.min.js"></script>
-
+      <script src="//cdn1.bethel.edu/foundation/js/foundation/foundation.alert.js"></script>
 
     {% endblock %}
 
