--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -98,8 +98,8 @@
         CKEDITOR.config.format_tags = 'h2;h3;h4';
         CKEDITOR.config.disableNativeSpellChecker = false;
         CKEDITOR.config.removePlugins = 'indent,indentlist,indentblock';
-
       }
+      $(document).foundation();
   });
   </script>
 
