--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -48,7 +48,7 @@
       <div id="nav" class="nav-bar right">
         {{ nav.nav() }}
       </div>
-      <h1>{% block page_title %}Bethel University Tinker{% endblock %}</h1>
+      <h1 id="page-title">{% block page_title %}Bethel University Tinker{% endblock %}</h1>
       <hr />
     </div>
   </div>
